reversed some venv issues

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 whitenoise = "*"
 environs = {extras = ["django"], version = "*"}
 gunicorn = "==19.9.0"
+django-crispy-forms = "*"
 
 [dev-packages]
 
